# tiny_arm_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: view_urdf.launch.py
meshes/: base_link.STL  gripper.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
rviz/: urdf.rviz
urdf/: tiny_arm.urdf
